@@ -4,6 +4,7 @@ ChangeLog for Simple Chat Client
 Version dev (unknown)
 ================================
 * Changed default emoticons,sounds dir
+* Fixed avatar display
 * Fixed sound
 
 Version 1.7.3 (07.04.2013)
